# talamus

./: .gitignore  .gitleaksignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  dev.py  gemini-extension.json  glama.json  index.html  llms-install.md  mkdocs.yml  pyproject.toml  requirements.txt  server.json  sitemap.xml
.cursor-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  publish.yml
.goose-plugin/: plugin.json
AI Space/normalized/: registry.json
AI Space/system/: AGENT_PROTOCOL.md  RUNBOOK.md
FDE Brain/: Chunk-to-Natural-Boundaries.md  Chunking-Strategies.md  Decision-Logging.md  Failure-Review-Queue.md  Fine-Grained-Citation.md  Foundations-of-Retrieval.md  Graph-Routing-Drift.md  Hybrid-Retrieval-Pattern.md  Hybrid-Retrieval.md  Knowledge-Graph-Routing.md  Knowledge-Graph.md  Operational-Hygiene.md  Operational-Ingestion-Hygiene.md  Provenance-and-Trust.md  Quarterly-Review.md  Retrieval-Augmented-Generation-RAG.md  Source-Hash-Invalidation.md  Source-Hash-Provenance.md  Vector-Search.md  test-book-Overview.md
agent-tool-calling/: index.html
architecture/: index.html
benchmarks/: README.md  __init__.py  index.html  one_screen.py  retrieval_lab.py  run.py  temporal_eval.py  token_efficiency.py
benchmarks/agent_mem/: task.py
benchmarks/ask_eval/: __init__.py  calibrate.py  judges.py  negatives_ci.json  ontology_ablation.py  pipeline.py  run.py  timeout_llm.py
benchmarks/longmemeval/: judge_pass.py  loader.py  run.py  runner.py
benchmarks/profiler/: stages.py
benchmarks/results/: 2026-06-17-ask-ablation.json  2026-06-17-ask-eval-ollama.json  2026-06-17-ask-eval.json  2026-06-17-shootout-book.json  2026-06-17-shootout-book.md  2026-07-02-scale-100k.json  2026-07-08-token-efficiency.md  2026-07-14-temporal.json  2026-07-14-temporal.md  one-screen.md
benchmarks/shootout/: metrics.py  report.py  runner.py
commands/: index.html
configuration/: index.html
design-principles/: index.html
dev/: ARCHITECTURE.md  PRODUCT.md  ROADMAP.md  STATE.md
dev/plans/: 2026-06-26-p7-web-workbench-skeleton.md  2026-07-02-v1-launch-3day-plan.md  2026-07-07-perfection-round.md
dev/research/: 2026-06-rs4-search-ceiling.md  2026-06-rs6-answer-quality.md  2026-06-rs7-competitive-expansion.md  2026-06-rs8-adaptive-trigram.md  2026-06-rs8-local-engine-and-refusal.md  2026-07-p2-tiering-savings.md
dev/specs/: 2026-07-01-p2-model-effort-tiering-design.md  2026-07-08-ontology-inference-design.md
docs/: agent-tool-calling.md  architecture.md  benchmarks.md  commands.md  configuration.md  design-principles.md  evaluation.md  index.md  local-first-agent-memory.md  ontology.md  privacy.md  quickstart.md  release-checklist.md  terms.md
docs/benchmarks/: 2026-06-10-m0-baseline.json  2026-06-10-m0-baseline.md  2026-06-10-m4-after.json  2026-06-10-m4-after.md
docs/research/: 2026-06-rs2-precision-power.md
docs/submissions/: openai-talamus-memory-v1.md
evaluation/: index.html
examples/: eval-cases-garden.json  eval-cases-real.json
local-first-agent-memory/: index.html
multi-brain/: index.html
ontology/: index.html
packaging/mcpb/: .mcpbignore  README.md  manifest.json  pyproject.toml
plugins/talamus-memory/: .goose-mcp.json  .mcp.json  CHANGELOG.md  README.md  mcp.json  plugin.json
privacy/: index.html
quickstart/: index.html
scripts/: kortex-session-hook.py  smoke_mcp_stdio.py  talamus-session-hook.py
scripts/demo/: run_magic.py
search/: search_index.json
skills/brain-knowledge/: SKILL.md
skills/talamus-knowledge/: SKILL.md
src/brain/: cli.py  config.py  linking.py  paths.py
src/kortex/: ask.py  cli.py  extract.py  ingest.py  mcp_server.py  naming.py  noteparse.py  (+3 more)
terms/: index.html
tests/: __init__.py  support.py  test_agent_plugin_package.py  test_ask.py  test_benchmarks_adaptive_floor.py  test_benchmarks_agent_mem.py  test_benchmarks_ask_eval.py  test_benchmarks_base.py  test_benchmarks_beir_datasets.py  test_benchmarks_bm25.py  test_benchmarks_calibrate.py  test_benchmarks_cli.py  test_benchmarks_dense_multilingual.py  test_benchmarks_garden_enrich.py  test_benchmarks_judge_cache.py  test_benchmarks_judged.py  test_benchmarks_llmwiki.py  test_benchmarks_longmemeval.py  test_benchmarks_metrics.py  test_benchmarks_miracl.py  test_benchmarks_negatives.py  test_benchmarks_one_screen.py  test_benchmarks_report.py  test_benchmarks_runner.py  test_benchmarks_talamus.py  test_benchmarks_temporal.py  test_benchmarks_timeout_llm.py  test_brain_cli.py  test_brain_obsidian_renderer.py  test_brain_paths_config.py  test_classify.py  test_container_package.py  test_distill_local.py  test_distill_long.py  test_distill_v3.py  test_gemini_extension.py  test_graphify.py  test_ingest.py  test_kortex_ask.py  test_kortex_cli.py  (+97 more)
webui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+209 files in other folders)
