[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talamus"
version = "0.1.0"
description = "Local-first knowledge compiler with graph-first retrieval for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Talamus Contributors" }
]
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.0"]
mcp = ["mcp>=1.0"]
dev = ["ruff>=0.6", "mypy>=1.11"]
bench = ["tiktoken>=0.7"]
docs = ["mkdocs-material>=9"]

[project.scripts]
talamus = "talamus.cli:main"
talamus-mcp = "talamus.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-dir = "tests"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # test data strings are legitimately long

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
