[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talamus"
version = "0.1.0"
description = "Local-first knowledge compiler with graph-first retrieval for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Talamus Contributors" }
]
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.0"]
mcp = ["mcp>=1.0"]
dev = ["ruff>=0.6", "mypy>=1.11"]
bench = [
    "tiktoken>=0.7",
    "rank-bm25>=0.2",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "mem0ai>=0.1",
]
docs = ["mkdocs-material>=9"]
ui = ["flet>=0.24", "fastapi>=0.110", "uvicorn>=0.29", "pywebview>=5.0"]
pdf = ["pypdf>=4"]

[project.scripts]
talamus = "talamus.cli:main"
talamus-mcp = "talamus.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
talamus = ["py.typed"]

[tool.unittest]
start-dir = "tests"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # test data strings are legitimately long

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
