[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talamus"
version = "1.1.1"
description = "Local-first, source-grounded memory for AI agents with citations, bitemporal history, and MCP."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "agent-memory",
  "ai-agents",
  "knowledge-graph",
  "local-first",
  "long-term-memory",
  "mcp",
  "model-context-protocol",
  "persistent-memory",
  "rag",
  "second-brain",
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
authors = [
  { name = "Talamus Contributors" }
]
maintainers = [
  { name = "Ampres" }
]
dependencies = []

[project.urls]
Homepage = "https://ampres-ai.github.io/talamus/"
Repository = "https://github.com/ampres-ai/talamus"
Issues = "https://github.com/ampres-ai/talamus/issues"
Documentation = "https://ampres-ai.github.io/talamus/"

[project.optional-dependencies]
docling = ["docling>=2.0"]
mcp = ["mcp>=1.0"]
dev = ["ruff>=0.6", "mypy>=1.11"]
bench = [
    "tiktoken>=0.7",
    "rank-bm25>=0.2",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "mem0ai>=0.1",
]
docs = ["mkdocs-material>=9"]
ui = ["fastapi>=0.110", "uvicorn>=0.29", "pywebview>=5.0"]
pdf = ["pypdf>=4"]

[project.scripts]
talamus = "talamus.cli:main"
talamus-mcp = "talamus.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
talamus = ["py.typed", "webapi/static/**/*"]

[tool.unittest]
start-dir = "tests"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # test data strings are legitimately long

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
